--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
     <h1> i'm kingkerr</h1>
     <h1> i'm king</h1>
-
+    <div id="login">
+       用户名： <input type="text">
+        密码：<input type="password">
+        登录<button type="button"></button>
+    </div>
 </body>
 </html>
