--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
        用户名： <input type="text">
         密码：<input type="password">
         登录<button type="button"></button>
+
+    <!-- 新闻列表 -->
+    <ul>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod corrupti minima quisquam, odio error architecto veniam autem dolorem non impedit atque saepe modi velit, sunt, placeat doloremque maiores consequatur nisi.</li>
+        <li>Impedit totam, ullam nemo est qui hic tempora nobis aspernatur dicta distinctio, esse sed nisi. Odit aut, nobis earum minus corporis ducimus laudantium facere hic quod repellat dolor sint non.</li>
+        <li>Cum possimus nisi nobis tempora aut reiciendis, atque veritatis dolor, voluptas facilis nulla, obcaecati vero ducimus in ipsa. Magni inventore recusandae distinctio voluptatum rerum. Exercitationem id incidunt voluptas repellendus nesciunt.</li>
+    </ul>
     </div>
 </body>
 </html>
